--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="acide bot parralax"></div>
         <div class="acide complete">
-          <img src="assets/creator.png" />
+          <img class="acideimg" src="assets/creator.png" />
         </div>
       </div>
     </div>
